--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
        <div class="row my-5">
         <div class="col-12 col-lg-6 col-md-6 col-xxl-6">
             <figure>
-                <img src="images/christine-donaldson-TV1jBQWiHwU-unsplash.jpg" alt="lake pic" class="lake-pic img-fluid">
+                <img src="christine-donaldson-TV1jBQWiHwU-unsplash.jpg" alt="lake pic" class="lake-pic img-fluid">
             </figure>
         </div>
 
@@ -106,7 +106,7 @@
                 <h4 id="scrollspyHeading1">First heading</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eveniet, reprehenderit, amet aliquam adipisci laborum porro nesciunt ad suscipit commodi quae, itaque sed totam obcaecati odio nisi? Sunt, non? Atque quisquam nihil modi, aut, quas id repellat, distinctio inventore a itaque omnis minima earum repellendus quam corrupti rerum. Cupiditate repellat atque eum temporibus et? Architecto voluptas, rerum, sequi fugiat sapiente, quae dolor optio suscipit harum perspiciatis ducimus assumenda commodi ut modi praesentium nobis doloremque dicta nam. Fuga officia fugiat adipisci? Laudantium expedita voluptates incidunt voluptate ipsam nisi earum repudiandae, officia delectus vel sunt similique, nam consequatur eaque aliquid eius neque.</p>
                 <h4 id="scrollspyHeading2">Second heading</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui a saepe rerum velit explicabo praesentium quos aliquid in veniam? Culpa id pariatur animi. Harum dignissimos deserunt tempore corporis provident veniam, cum eos fuga, quos voluptatum commodi, rerum quasi nemo eveniet libero alias suscipit repellat itaque nisi voluptatibus reiciendis! Temporibus, quae!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui a saepe rerum velit explicabo praesentium quos aliquid in veniam? Culpa id pariatur animi. Harum dignissimos deserunt tempore corporis provident veniam, cum eos fuga, quos voluptatum commodi, rerum quasi nemo eveniet libero alias suscipit repellat itaque nisi voluptatibus reiciendis! Temporibus, quae! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui a saepe rerum velit explicabo praesentium quos aliquid in veniam? Culpa id pariatur animi. Harum dignissimos deserunt tempore corporis provident veniam, cum eos fuga, quos voluptatum commodi, rerum quasi nemo eveniet libero alias suscipit repellat itaque nisi voluptatibus reiciendis! Temporibus, quae!</p>
                 <h4 id="scrollspyHeading3">Third heading</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui a saepe rerum velit explicabo praesentium quos aliquid in veniam? Culpa id pariatur animi. Harum dignissimos deserunt tempore corporis provident veniam, cum eos fuga, quos voluptatum commodi, rerum quasi nemo eveniet libero alias suscipit repellat itaque nisi voluptatibus reiciendis! Temporibus, quae!</p>
                 <h4 id="scrollspyHeading4">Fourth heading</h4>
