--- a/index.html
+++ b/index.html
@@ -63,31 +63,32 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/1.jpg" class="d-block w-100" alt="lavender-fields-pic">
+            <img src="1.jpg" class="d-block w-100" alt="lavender-fields-pic">
             <div class="carousel-caption d-md-block">
               <h5>First Slide Label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-              <img src="images/2.jpg" class="d-block w-100" alt="mountain-pic">
+              <img src="2.jpg" class="d-block w-100" alt="mountain-pic">
               <div class="carousel-caption d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/3.jpg" class="d-block w-100" alt="lake-pic">
+            <img src="3.jpg" class="d-block w-100" alt="lake-pic">
             <div class="carousel-caption d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/4.jpg" class="d-block w-100" alt="horses-pic">
+            <img src="4.jpg" class="d-block w-100" alt="horses-pic">
             <div class="carousel-caption d-md-block">
               <h5>Fourth slide label</h5>
               <p>Some representative placeholder content for the fourth slide.</p>
@@ -117,7 +118,7 @@
        <div class="row my-5">
         <div class="col-12 col-lg-6 col-md-6 col-xxl-6">
             <figure>
-                <img src="images/christine-donaldson-TV1jBQWiHwU-unsplash.jpg" alt="lake pic" class="lake-pic img-fluid">
+                <img src="christine-donaldson-TV1jBQWiHwU-unsplash.jpg" alt="lake pic" class="lake-pic img-fluid">
             </figure>
         </div>
 
@@ -152,7 +153,7 @@
         <div class="card mb-3 services" style="max-width: 540px;">
           <div class="row">
             <div class="col-md-5">
-              <img src="images/cagatay-orhan-PYh4QCX_fmE-unsplash.jpg" class="img-fluid services-img" alt="...">
+              <img src="cagatay-orhan-PYh4QCX_fmE-unsplash.jpg" class="img-fluid services-img" alt="...">
             </div>
             <div class="col-md-7">
               <div class="card-body">
@@ -173,7 +174,7 @@
           <div class="card mb-3 services" style="max-width: 540px;">
             <div class="row">
               <div class="col-md-5">
-                <img src="images/cagatay-orhan-PYh4QCX_fmE-unsplash.jpg" class="img-fluid services-img" alt="...">
+                <img src="cagatay-orhan-PYh4QCX_fmE-unsplash.jpg" class="img-fluid services-img" alt="...">
               </div>
               <div class="col-md-7">
                 <div class="card-body">
@@ -194,7 +195,7 @@
         <div class="card mb-3 services" style="max-width: 540px;">
           <div class="row">
             <div class="col-md-5">
-              <img src="images/cagatay-orhan-PYh4QCX_fmE-unsplash.jpg" class="img-fluid services-img" alt="...">
+              <img src="cagatay-orhan-PYh4QCX_fmE-unsplash.jpg" class="img-fluid services-img" alt="...">
             </div>
             <div class="col-md-7">
               <div class="card-body">
@@ -239,55 +240,55 @@
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
         <div class="col-10 col-md-4 col-xxl-4 mx-auto">
           <figure>
-            <img src="images/simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
+            <img src="simon-waelti-G63__2LCIyU-unsplash.jpg" alt="gallery-image" class="img-fluid">
           </figure>
         </div>
 
